
Fixes and improvements for the runtime:
* Fix splash screen freezing in the X11 web plug-in
* pdeploy will now handle extracted files (eg. .ico and .cur)
* Added more options for customizing splash screen
* Fix missing xml and ast modules from morepy package
* Certificate dialog is now localized to various languages
* Pass on failing exit status from packaged application
* Fix issue installing pdeploy-generated .pkg on OS X 10.11

Fixes for the Python API:
* Fix mysterious and rare crash in tp_traverse
* Bullet step function accidentally defaulted to step size of 0
* Fix overflow sizes of various integral types, eg. file offsets
* Fix regression with memoryviews
* Fix hasattr/getattr of vector classes for invalid attributes
* Allow passing a long to methods accepting an int
* Fix crash when passing None to Filename constructor
* MouseWatcherGroup was erroneously not exposed in 1.9.0
* ShowBase no longer unmounts VFS when shutting down
* No longer requires setting PATH to import panda3d.*
* Fix WebcamVideo/MicrophoneAudio.getOptions() methods

Changes relating to the OpenGL renderer:
* Various performance improvements
* Fix point/line thickness setting
* Improve GLSL error reporting
* Fix Intel driver issues, particularly with geometry shaders
* Add more error checking for parameter types
* Integer shader inputs were not being converted to float properly
* Fix crash passing an undersized array to a GLSL shader input
* p3d_ColorScale et al may now be declared as vec3
* Fix flickering when using trans_model_to_apiview in Cg
* Support wireframe and point rendering modes in OpenGL ES
* Fix issue with model disappearing in rare cases with GLSL
* Fix ColorWriteAttrib not working as it should
* Allow deactivating PStats collectors for GPU timers
* Memory residency of graphics buffers now tracked by PStats
* Allow changing OpenGL coordinate system with gl-coordinate-system

Fixes for libRocket integration:
* libRocket did not work on Mac OS X in 1.9.0